--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Kumar Bhatta.</span>
             </h1>
-            <p class="header-subtitle"> <strong>Engineer/ Entrepreneur</strong></p>
+            <p class="header-subtitle"> <strong>Engineer and Entrepreneur</strong></p>
             
             <button class="btn btn-primary" onclick="window.open('https://www.nirmansathi.com', '_blank')">My Startup</button>
 
